tests/invalid/precedence_indent_over_syntax.nano
first root
second root
   partial indentation
